js/js.translator/testData/incremental/invalidation/fileNameClash/lib/f2.4.kt
package foo

fun test2() = "OK"